test/libsolidity/syntaxTests/nameAndTypeResolution/528_fallback_marked_private.sol
contract C {
    fallback () private { }
}
// ----
// TypeError: (17-40): Fallback function must be defined as "external".
